# AI-AgentWeb

./: .gitignore  Makefile  docker-compose.yml  package.json  pyproject.toml  中文网页智能体平台_V1_分阶段开发详细任务清单.md  网页智能体平台_V1_需求与设计.md
.github/workflows/: ci.yml
apps/api/app/: main.py
apps/api/app/api/v1/: chat.py  health.py  sessions.py
apps/api/app/core/: config.py  logging.py
apps/api/app/schemas/: chat.py  common.py  health.py  message.py  run.py  session.py
apps/api/app/services/: in_memory_store.py  mock_chat.py
apps/web/: package.json  tailwind.config.ts
apps/web/app/: layout.tsx  page.tsx
apps/web/components/: chat-shell.tsx
apps/web/lib/: api.ts
docs/architecture/: README.md  phase1-interface-contracts.md  v1-execution-plan.md
docs/prompts/: README.md
docs/runbooks/: README.md
tests/integration/: test_health.py  test_sessions_and_chat.py
